Camel: Correct result of the "is" filter condition on address headers
I'm trying to colour e-mails sent exclusively to me, so I have set up a filter with the following rule:
If all the following conditions are met
Recipients is my-personal@address.com
Then
Assign Color [#ef2929]
But it doesn't work as expected, because also e-mails sent to me and other people get coloured by this filter. This is the behaviour I would have expected had I set up a Recipient contains my-personal@address.com
rule, but not an is
rule.
Apparently at least one other person has had a similar issue: https://superuser.com/questions/1432625/how-can-i-create-an-email-filter-in-evolution-for-only-when-the-recipient-is-a-s Since there have been no answers to this question yet, I wanted to check if this is indeed a bug in evolution by opening this ticket.