I#151 - Camel: Correct result of the "is" filter condition on address headers

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/151